--- a/framework/source/resource/qx/mobile/scss/ui/_slider.scss
+++ b/framework/source/resource/qx/mobile/scss/ui/_slider.scss
@@ -71,3 +71,9 @@
 .slider.value > div:after {
   content: ""attr(data-value);
 }
+
+// Triggering CSS anti-aliasing on Android devices [BUG #7847]
+.root.android .slider > div:after {
+  content:".";
+  color:rgba(0,0,0,0);
+}
